# agent-eye

./: .gitignore  README.md  agent-eye.spec  build.cmd  pyproject.toml
src/: run.py
src/agent_eye/: __init__.py  __main__.py  config.py  server.py
src/agent_eye/action/: __init__.py  executor.py
src/agent_eye/perception/: omniparser.py  screenshot.py  uia.py
